--- a/appstate.json
+++ b/appstate.json
@@ -1,119 +1,137 @@
 [
     {
-        "domain": ".facebook.com",
-        "expirationDate": 1785828248.083099,
+        "key": "dbln",
+        "value": "%7B%22100087632392287%22%3A%22RpTCD6Dq%22%2C%2261566115796986%22%3A%22agW050Br%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
         "hostOnly": false,
-        "httpOnly": true,
-        "name": "ps_l",
-        "path": "/",
-        "sameSite": "lax",
-        "secure": true,
-        "session": false,
-        "storeId": null,
-        "value": "1"
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
     },
     {
-        "domain": ".facebook.com",
-        "expirationDate": 1758982291,
-        "hostOnly": false,
-        "httpOnly": false,
-        "name": "vpd",
+        "key": "datr",
+        "value": "O2CMaCB8GT2Fon2_aNjzqhng",
+        "domain": "facebook.com",
         "path": "/",
-        "sameSite": "lax",
-        "secure": true,
-        "session": false,
-        "storeId": null,
-        "value": "v1%3B685x384x2.8125"
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
     },
     {
-        "domain": ".facebook.com",
-        "expirationDate": 1753947887.452934,
-        "hostOnly": false,
-        "httpOnly": false,
-        "name": "locale",
+        "key": "sb",
+        "value": "O2CMaHMretSaQsjHSWgo6PfJ",
+        "domain": "facebook.com",
         "path": "/",
-        "sameSite": "no_restriction",
-        "secure": true,
-        "session": false,
-        "storeId": null,
-        "value": "ar_AR"
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
     },
     {
-        "domain": ".facebook.com",
-        "expirationDate": 1788358294.393856,
-        "hostOnly": false,
-        "httpOnly": true,
-        "name": "pas",
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
         "path": "/",
-        "sameSite": "lax",
-        "secure": true,
-        "session": false,
-        "storeId": null,
-        "value": "100090138577417%3ADYe9NMt5VQ%2C61566115796986%3ANURBRBighN"
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
     },
     {
-        "domain": ".facebook.com",
-        "expirationDate": 1785828248.084748,
-        "hostOnly": false,
-        "httpOnly": true,
-        "name": "ps_n",
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
         "path": "/",
-        "sameSite": "no_restriction",
-        "secure": true,
-        "session": false,
-        "storeId": null,
-        "value": "1"
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
     },
     {
-        "domain": ".facebook.com",
-        "expirationDate": 1788418773.659312,
-        "hostOnly": false,
-        "httpOnly": true,
-        "name": "sb",
+        "key": "locale",
+        "value": "ar_AR",
+        "domain": "facebook.com",
         "path": "/",
-        "sameSite": "no_restriction",
-        "secure": true,
-        "session": false,
-        "storeId": null,
-        "value": "lDtiaN4mNXYvSvSnc8k_997R"
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
     },
     {
-        "domain": ".facebook.com",
-        "expirationDate": 1754486551,
-        "hostOnly": false,
-        "httpOnly": false,
-        "name": "wd",
+        "key": "vpd",
+        "value": "v1%3B637x333x3.2363994121551514",
+        "domain": "facebook.com",
         "path": "/",
-        "sameSite": "lax",
-        "secure": true,
-        "session": false,
-        "storeId": null,
-        "value": "980x1748"
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
     },
     {
-        "domain": ".facebook.com",
-        "expirationDate": 1761574300,
-        "hostOnly": false,
-        "httpOnly": false,
-        "name": "wl_cbv",
+        "key": "m_pixel_ratio",
+        "value": "3.2363994121551514",
+        "domain": "facebook.com",
         "path": "/",
-        "sameSite": "no_restriction",
-        "secure": true,
-        "session": false,
-        "storeId": null,
-        "value": "v2%3Bclient_version%3A2883%3Btimestamp%3A1753798288"
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
     },
     {
-        "domain": ".facebook.com",
-        "expirationDate": 1754486551,
-        "hostOnly": false,
-        "httpOnly": false,
-        "name": "dpr",
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
         "path": "/",
-        "sameSite": "no_restriction",
-        "secure": true,
-        "session": false,
-        "storeId": null,
-        "value": "2.8125"
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61566115796986",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
+    },
+    {
+        "key": "xs",
+        "value": "31%3Ah8YhD7IH9H91gA%3A2%3A1754030567%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
+    },
+    {
+        "key": "fr",
+        "value": "0pwXpfvE0pRhTdBNr.AWeUUIaRlwk4ZmOZnHk5o-_c82ksR_wh0LNhgUMI6QmyII_uMo0.BojGA7..AAA.0.0.BojGHr.AWfR48XRrgqgYzaMNnqAWMh3-LI",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
+    },
+    {
+        "key": "pas",
+        "value": "100087632392287%3AIxG9mKdbQe%2C61566115796986%3AG0YLY8VU6M",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2884%3Btimestamp%3A1754030571",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101323113%3BT%3A29233842",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T06:43:28.551Z",
+        "lastAccessed": "2025-08-01T06:43:28.551Z"
     }
 ]
