--- a/config.json
+++ b/config.json
@@ -102,7 +102,7 @@
     "fbcover": {
         "APIKEY": "tdunguwu"
     },
-    "help": {
+    "مساعدة2": {
         "autoUnsend": true,
         "delayUnsend": 120
     },
